# dreaming-wizard

./: .gitignore  Cargo.toml  README.md  Tasks.md  justfile
.github/workflows/: just-test.yml
i18n/en/: dreaming_wizard.ftl
resources/: app.desktop  app.metainfo.xml
src/: app.rs  config.rs  i18n.rs  main.rs
src/app/: chrome.rs  find.rs  mod.rs  overlays.rs  project_io.rs
src/components/: button_style.rs  character_card.rs  character_card_editor.rs  confirm_dialog.rs  dev_helper_fn.rs  dev_serializer.rs  find_panel.rs  mod.rs  new_project_dialog.rs  overlay.rs  project_data.rs  save_project_dialog.rs  simple_popup.rs  story_block.rs  story_node.rs  story_node_editor.rs  unsaved_changes_dialog.rs
src/nav/: canvas.rs  characters.rs  mod.rs  settings.rs
