[package]
name = "dreaming-wizard"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"
description = "A narrative storytelling tool."
repository = "https://github.com/john-basilio/dreaming-wizard"

[dependencies]
dirs = "6.0.0"
futures = "0.3.32"
i18n-embed = { version = "0.16", features = [
    "fluent-system",
    "desktop-requester",
] }
i18n-embed-fl = "0.10"
jiff = "0.2"
open = "5.3.2"
rust-embed = "8.8.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.48.0", features = ["full"] }
uuid = { version = "1.23.4", features = ["v4"] }

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic.git"
# See https://github.com/pop-os/libcosmic/blob/master/Cargo.toml for available features.
# Remove features if not needed.
features = [
    # About widget for the app
    "about",
    # On app startup, focuses an existing instance if the app is already open
    "single-instance",
    # Markdown widget
    "markdown",
    # QR code widget
    "qr_code",
    # GPU-accelerated rendering
    "wgpu",
    # xdg portal dialogs on Linux
    "xdg-portal"
]

# Uncomment to test a locally-cloned libcosmic
# [patch.'https://github.com/pop-os/libcosmic']
# libcosmic = { path = "../libcosmic" }
# cosmic-config = { path = "../libcosmic/cosmic-config" }
# cosmic-theme = { path = "../libcosmic/cosmic-theme" }
